adding date function to convert with certain format and locale

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,4 @@
-source 'https://github.com/VodafoneEgypt/Specs.git'
+source 'https://gitlab.com/TahaElsheikh1/specs.git'
 source 'https://github.com/CocoaPods/Specs'
 
 use_frameworks!
